--- a/demo/common.css
+++ b/demo/common.css
@@ -2,17 +2,17 @@
   border-collapse: collapse;
   width: 150px;
 }
-th,
-td {
-  border: 1px solid black;
-  width: 100px;
-  min-width: 100px;
-  height: 20px;
-}
 .grid-head {
   width: 150px;
 }
 .grid-body {
   height: 100px;
   width: 150px;
+}
+.grid-head-row-cell,
+.grid-body-row-cell {
+  border: 1px solid black;
+  width: 100px;
+  min-width: 100px;
+  height: 20px;
 }
